エラーメッセージの日本語化対応（修正）

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,6 @@ ja:
   activerecord:
     attributes:
       user:
-        nickname: 名前
+        nickname: ニックネーム
       article:
         text: テキスト
